styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;');

* {
  margin: 0;
  padding: 0;
}

.navigation {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-top: 44px;
  width: 375px;
}

.toolbar-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin: auto;
  padding-right: 24px;
  padding-left: 24px;
}

.logo {
  background-repeat: no-repeat;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 28px;
}

.toolbar-container a {
  text-decoration: none;
  font-size: 30px;
  display: block;
  color: #28352f;
}

.toolbar-container a:hover {
  color: #e71010;
}

.back-image {
  background-image: url(image/header-illsutration-mobile@2x.jpeg);
  background-size: contain;
  background-repeat: no-repeat;
  width: 375px;
}

.headline-desk-container {
  display: none;
}

.headline .back-image {
  width: 375px;
}

.headline {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 58px;
  gap: 58px;
  width: 327px;
  margin: auto;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 1px;
}

.primary-headline h1 {
  font-family: 'Inter', sans-serif;
  font-size: 40px;
  align-self: start;
  line-height: 52px;
  font-style: normal;
  color: #172b4d;
  font-weight: 700;
  text-align: center;
  width: 327px;
  height: 192px;
  align-items: center;
}

.h1color {
  color: rgb(59, 200, 122);
}

.supporting-text {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #172b4d;
  text-align: center;
  width: 327px;
  height: 164px;
}

.socialt {
  width: 170.17px;
  height: 20px;
  display: flex;
  align-items: center;
  list-style: none;
  margin: auto;
}

.scroll {
  width: 40px;
  height: 40px;
  background: #fff;
  border: 1px solid #dfe1e6;
  border-radius: 32px;
  align-self: center;
}

/* -- Project and About Section-- */

.recent-works-container {
  display: grid;
  width: 379px;
  align-items: center;
  margin: auto;
  margin-left: 1px;
}

.primary-text {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  padding-top: 24px;
}

.indicator {
  width: 48px;
  height: 4px;
  background: #36b37e;
  border-radius: 24px;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(768px, 1fr 1fr 1fr));
  align-items: center;
  gap: 24px;
  width: 331px;
  padding-top: 24px;
}

.project1:nth-child(1) {
  left: 0;
  right: 0;
  top: 708px;
  width: 327px;
  margin-left: 26px;
  margin-right: 22px;
  border-radius: 8px;
  border: 1px solid #d0d9d4;
  background: #ebf0ee;
}

.project2:nth-child(2) {
  left: 0;
  right: 0;
  top: 708px;
  width: 327px;
  margin-left: 26px;
  margin-right: 22px;
  border-radius: 8px;
  border: 1px solid #d0d9d4;
  background: #ebf0ee;
}

.project3:nth-child(3) {
  left: 0;
  right: 0;
  top: 708px;
  width: 327px;
  margin-left: 26px;
  margin-right: 22px;
  border-radius: 8px;
  border: 1px solid #d0d9d4;
  background: #ebf0ee;
}

.project4:nth-child(4) {
  left: 0;
  right: 0;
  top: 708px;
  width: 327px;
  margin-left: 26px;
  margin-right: 22px;
  border-radius: 8px;
  border: 1px solid #d0d9d4;
  background: #ebf0ee;
}

.project5:nth-child(5) {
  left: 0;
  right: 0;
  top: 708px;
  width: 327px;
  margin-left: 26px;
  margin-right: 22px;
  border-radius: 8px;
  border: 1px solid #d0d9d4;
  background: #ebf0ee;
}

.project6:nth-child(6) {
  left: 0;
  right: 0;
  top: 708px;
  width: 327px;
  margin-left: 26px;
  margin-right: 22px;
  border-radius: 8px;
  border: 1px solid #d0d9d4;
  background: #ebf0ee;
}

.project-detail {
  height: 222px;
  left: calc(50% - 327px / 2);
  margin-top: 252px;
  bottom: 0;
  background: #fff;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 16px;
  gap: 16px;
}

.project-detail h4 {
  background: #fff;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  width: 295px;
  height: 57px;
  display: flex;
  flex-direction: row;
  padding: 16px;
  align-items: center;
  text-align: center;
}

.project-detail ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0;
  gap: 2px;
  width: 305px;
  height: 32px;
  background: #fff;
  list-style: none;
}

.project-detail li {
  padding: 8px 12px;
  border-radius: 4px;
  border: none;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #3a4a42;
  background: #ebf0ee;
}

.see-project {
  width: 122px;
  height: 48px;
  right: 50%;
  bottom: 24px;
  background: #36b37f;
  border: none;
  border-radius: 4px;
  align-items: center;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
  letter-spacing: 0.03em;
  color: #fff;
}

.button-detail-2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 24px;
  padding-bottom: 24px;
  gap: 2px;
  width: 305px;
  height: 48px;
  background: #fff;
}

.project-detail .see-project a {
  color: #344563;
  text-decoration: none;
}

.project-detail .see-project:active {
  color: #dfe1e6;
  background: #52bee9;
}

.project-detail .see-project button:enabled {
  background: #172b4d;
}

.project-detail .see-project:hover {
  background: #1dc9df;
}

.about {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 351px;
  gap: 24px;
  padding-top: 48px;
  padding-left: 42px;
  padding-right: 12px;
}

.about-primary-text h3 {
  display: flex;
  flex-direction: row;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  text-align: center;
  color: #172b4d;
}

.about-supporting-text {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  padding-left: 12px;
  padding-right: 12px;
  text-align: center;
  color: #42526e;
}

.button-resume {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 24px;
  padding-bottom: 59px;
}

.get-resume {
  width: 159px;
  height: 48px;
  align-items: center;
  right: 50%;
  padding: 12px;
  background: #36b37f;
  border: none;
  border-radius: 4px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
  letter-spacing: 0.03em;
  color: #fff;
}

.language-detail .get-resume a {
  color: #344563;
  text-decoration: none;
}

.language-detail .get-resume:active {
  color: #dfe1e6;
  background: #52bee9;
}

.language-detail .get-resume:visited {
  color: #dfe1e6;
  background: #008552;
}

.language-detail .get-resume button:enabled {
  background: #36B37F;
}

.language-detail .get-resume:hover {
  background: #36B37F;
}

.back-image-2 {
  background-image: url(image/illustration-\ about\ me.png);
  background-size: contain;
  background-repeat: no-repeat;
}

.back-image-3 {
  background-image: url(image/illustration\ -\ about\ me-mobile.jpg);
  background-size: contain;
  background-repeat: no-repeat;
  left: 365px;
  display: flex;
  flex-direction: row;
  position: absolute;
  width: 90.87px;
  height: 100.94px;
}

.about-cards {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(352px, 1fr));
  align-items: center;
  padding: 1px;
  gap: 24px;
  width: 327px;
  height: 1106px;
}

.language-detail {
  width: 327px;
  height: 352px;
  background: #ebf0ee;
  border: 1px solid #c1c7d0;
  border-radius: 8px;
}

.language-detail .language-image {
  width: 100px;
  height: 100px;
  margin-top: 40px;
  margin-right: 50%;
  margin-left: 123px;
  margin-bottom: 0 auto;
  left: calc(50% - 80px / 2 + 0.5px);
  top: calc(50% - 80px / 2);
}

.language-detail div {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
  gap: 24px;
  width: 327px;
  height: 96px;
  left: calc(50% - 327px / 2);
  bottom: 72px;
}

.language-detail h4 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  color: #344563;
}

.language-detail ul {
  display: flex;
  flex-direction: row;
  padding: 8px;
  list-style: none;
  align-items: center;
  flex-wrap: wrap;
  justify-content: center;
}

.language-detail li {
  background: white;
  color: #36b37e;
  padding: 8px;
  text-align: center;
  border-radius: 8px;
  font-size: 14px;
  font-weight: 600;
  line-height: 40px;
  margin: 0 10px 10px 0;
  letter-spacing: 0.03em;
}

